<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NoteWritingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_pink"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/textViewNotes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/text_view_notes"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/bottomNavigationView"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <SeekBar
                        android:id="@+id/seekBarMood"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="110dp"
                        android:layout_marginVertical="10dp"
                        android:max="10"
                        android:progress="0"
                        android:progressBackgroundTint="@color/light_grey"
                        android:progressTint="@color/my_pink"
                        android:scaleX="2"
                        android:scaleY="2"
                        android:thumbTint="@color/my_pink"
                        android:visibility="visible"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewSituation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/text_view_situation"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextSituation"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/black"
                    android:gravity="top"
                    android:hint="@string/edit_text_situation"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:scrollbars="vertical"
                    tools:ignore="DuplicateSpeakableTextCheck"/>

                <TextView
                    android:id="@+id/textViewThoughts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/text_view_thoughts"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextThoughts"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/black"
                    android:gravity="top"
                    android:hint="@string/edit_text_situation"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:id="@+id/textViewEmotions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/text_view_emotions"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextEmotions"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/black"
                    android:gravity="top"
                    android:hint="@string/edit_text_situation"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:id="@+id/textViewReactions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/text_view_reactions"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextReactions"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/black"
                    android:gravity="top"
                    android:hint="@string/edit_text_situation"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"/>

                <TextView
                    android:id="@+id/textViewComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/text_view_comment"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/black"
                    android:gravity="top"
                    android:hint="@string/edit_text_situation"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/buttonSaveNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@color/my_light_pink"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:text="@string/button_save_notes"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/my_pink"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
