...
    <item
        android:id="@+id/calendar"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/menu_navigation_calendar"/>

    <item
        android:id="@+id/notes"
        android:icon="?attr/actionModePasteDrawable"
        android:title="@string/menu_navigation_notes"/>

    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_myplaces"
...
