...
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/buttonSportsmanProfileExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/button_exit"
                android:textColor="@color/white"
...
