...
            app:backgroundTint="@color/my_light_pink"
            app:srcCompat="@drawable/decline_application"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/buttonAcceptRequest"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            app:backgroundTint="@color/my_light_pink"
            app:srcCompat="@drawable/accept_application"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />
...
